RESOLVED FIXED235248
[iOS] Occasional crash under -[UITargetedPreview initWithView:parameters:target:] when focusing form controls
https://bugs.webkit.org/show_bug.cgi?id=235248
Summary [iOS] Occasional crash under -[UITargetedPreview initWithView:parameters:targ...
Wenson Hsieh
Reported 2022-01-14 13:11:23 PST
Attachments
Patch (4.71 KB, patch)
2022-01-14 13:24 PST, Wenson Hsieh
no flags
For landing (5.75 KB, patch)
2022-01-14 13:54 PST, Wenson Hsieh
no flags
Adjust ChangeLog wording (5.77 KB, patch)
2022-01-14 14:29 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2022-01-14 13:24:23 PST Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2022-01-14 13:54:22 PST Comment hidden (obsolete)
Wenson Hsieh
Comment 3 2022-01-14 14:29:53 PST
Created attachment 449225 [details] Adjust ChangeLog wording
EWS
Comment 4 2022-01-14 16:57:31 PST
Committed r288039 (246065@main): <https://commits.webkit.org/246065@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449225 [details].
Ali Juma
Comment 5 2022-01-25 11:38:37 PST
*** Bug 228559 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.