Cherry-pick r288039. rdar://problem/79220540

[iOS] Occasional crash under -[UITargetedPreview initWithView:parameters:target:] when focusing form controls
    https://bugs.webkit.org/show_bug.cgi?id=235248
    rdar://79220540

    Reviewed by Tim Horton and Aditya Keerthi.

    Source/WebKit:

    It's possible for `-resizableSnapshotViewFromRect:afterScreenUpdates:withCapInsets:` to return a `nil` snapshot
    view in the case where a screen update has not been performed yet (among other scenarios). In the case where
    UIKit returns `nil` when we're creating the targeted preview for the context menu when focusing a select element
    or file input, we'll crash due to an Objective-C exception in the initializer of UITargetedPreview. Mitigate
    this by falling back to an empty UIView after requesting the snapshot view to make our code robust against this
    scenario.

    Test: KeyboardInputTests.DoNotCrashWhenFocusingSelectWithoutViewSnapshot

    * UIProcess/ios/WKContentViewInteraction.mm:
    (createFallbackTargetedPreview):

    Tools:

    Add an API test that exercises the crash by forcing `-resizableSnapshotViewFromRect:afterScreenUpdates:withCapInsets:`
    to return nil via swizzling.

    * TestWebKitAPI/Tests/ios/KeyboardInputTestsIOS.mm:
    (TestWebKitAPI::nilResizableSnapshotViewFromRect):
    (TestWebKitAPI::TEST):

    Canonical link: https://commits.webkit.org/246065@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288039 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.24@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@288506 268f45cc-cd09-0410-ab3c-d52691b4dbfc